# Menger-Sponge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  MengerSponge.cpp  MengerSponge.h  main.cpp
src/Shaders/: MengerSponge.frag  MengerSponge.vert
